# AngleSharedTextureDemo

./: .gitignore  ANGLEProducer.cpp  CMakeLists.txt  D3D11Consumer.cpp  PerfettoTracing.cpp  PerfettoTracing.h  README.md  SharedTextureDemo.h  TECHNICAL_GUIDE.md  main.cpp  main_pipeline.cpp
.claude/: settings.local.json
